Fix blurry archive-toggle

--- a/assets/css/_header-archive.scss
+++ b/assets/css/_header-archive.scss
@@ -52,6 +52,7 @@
   text-indent: -9999px;
   background: transparent;
   border: 0;
+  vertical-align: bottom;
   &:active,
   &:focus {
     outline: 0;
